-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.1, 5.9.4, 5.11.0 Beta 4
-
Boot2Qt, embedded linux using eglfs plugin.
-
9b03a98ffb807f49d1e79fffad141a3634474d8a
When visiting a page with a simple webengine qml app, drag and drop crashes the app. Simple test is to select some text from the webpage, and try to drag it elsewhere on the view.
EGLFS: OpenGL windows cannot be mixed with others.
Program received signal SIGABRT, Aborted.
0x72ccdf70 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
56 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
(gdb) bt
#0 0x72ccdf70 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#1 0x72ccf324 in __GI_abort () at abort.c:89
#2 0x73065160 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:1682
#3 0x73061158 in QMessageLogger::fatal (this=0x7effe3bc,
msg=0x725688f0 "EGLFS: OpenGL windows cannot be mixed with others.") at global/qlogging.cpp:793
#4 0x724bc8a8 in QEglFSWindow::create (this=0x1683e0) at qeglfswindow.cpp:115
#5 0x724b8b8c in QEglFSIntegration::createPlatformWindow (this=0x51160, window=0x168350)
at qeglfsintegration.cpp:193
#6 0x73f68adc in QWindowPrivate::create (this=0x16c3f0, recursive=false) at kernel/qwindow.cpp:406
#7 0x73f69240 in QWindow::create (this=0x168350) at kernel/qwindow.cpp:584
#8 0x724b8b0c in QEglFSIntegration::createPlatformBackingStore (this=0x51160, window=0x168350)
at qeglfsintegration.cpp:184
#9 0x7417b060 in QBackingStore::QBackingStore (this=0x153708, window=0x168350)
at painting/qbackingstore.cpp:140
#10 0x73fb9934 in QRasterWindow::QRasterWindow (this=0x168350, parent=0x0) at kernel/qrasterwindow.cpp:105
#11 0x73f4dfd4 in QShapedPixmapWindow::QShapedPixmapWindow (this=0x168350, screen=0x0)
at kernel/qshapedpixmapdndwindow.cpp:51
#12 0x73f4f3ec in QBasicDrag::recreateShapedPixmapWindow (this=0x1595d0, screen=0x0, pos=...)
at kernel/qsimpledrag.cpp:242
#13 0x73f4f35c in QBasicDrag::startDrag (this=0x1595d0) at kernel/qsimpledrag.cpp:229
#14 0x73f4f8f4 in QSimpleDrag::startDrag (this=0x1595d0) at kernel/qsimpledrag.cpp:344
#15 0x73f4f16c in QBasicDrag::drag (this=0x1595d0, o=0x125568) at kernel/qsimpledrag.cpp:191
#16 0x73f76cf0 in QDragManager::drag (this=0xd9b08, o=0x125568) at kernel/qdnd.cpp:141
#17 0x73f75610 in QDrag::exec (this=0x125568, supportedActions=..., defaultDropAction=Qt::IgnoreAction)
at kernel/qdrag.cpp:284
#18 0x73f75458 in QDrag::exec (this=0x125568, supportedActions=...) at kernel/qdrag.cpp:240
#19 0x75357e34 in QtWebEngineCore::WebContentsAdapter::startDragging(QObject*, content::DropData const&, QFlags<Qt::DropAction>, QPixmap const&, QPoint const&) () from /usr/local/qt5/lib/libQt5WebEngineCore.so.5
#20 0x76f3ce20 in QQuickWebEngineViewPrivate::startDragging(content::DropData const&, QFlags<Qt::DropAction>, QPixmap const&, QPoint const&) () from /usr/local/qt5/lib/libQt5WebEngine.so.5
Cannot access memory at address 0xffffffff
#21 0x7535c99c in ?? () from /usr/local/qt5/lib/libQt5WebEngineCore.so.5
Cannot access memory at address 0xffffffff
Backtrace stopped: previous frame identical to this frame (corrupt stack?)
For Gerrit Dashboard: QTBUG-57516 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
227507,8 | Disable drag&drop on eglfs for qml app | 5.11 | qt/qtwebengine | Status: MERGED | +2 | 0 |